--- a/.gitignore
+++ b/.gitignore
@@ -33,12 +33,16 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# Google Cloud credentials (never commit these!)
+*.json
+!package.json
+!package-lock.json
+!tsconfig.json
+!next.config.ts
+
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# google cloud
-white-fiber-470711-s7-efbed390336b.json
