--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-toastify": "^10.0.6",
     "stripe": "^19.1.0"
   },
   "devDependencies": {
