--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,6 +24,30 @@ steps:
       - '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_REPO}/${_SERVICE}'
     id: Push
 
+  # Deploy to Cloud Run
+  - name: gcr.io/google.com/cloudsdktool/cloud-sdk
+    entrypoint: gcloud
+    args:
+      - run
+      - deploy
+      - ${_SERVICE}
+      - '--image=${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_REPO}/${_SERVICE}:${SHORT_SHA}'
+      - '--region=${_REGION}'
+      - '--platform=managed'
+      - '--allow-unauthenticated'
+      - '--port=8080'
+      - '--memory=1Gi'
+      - '--cpu=1'
+      - '--min-instances=0'
+      - '--max-instances=10'
+      - '--timeout=300'
+      - '--concurrency=80'
+      # Public environment variables (non-sensitive)
+      - '--set-env-vars=NODE_ENV=production,OPENAI_MODEL=gpt-4o-mini,OPENAI_BASE_URL=https://api.openai.com/v1,GOOGLE_CLOUD_LOCATION=${_REGION},GOOGLE_CLOUD_PROJECT_ID=${PROJECT_ID},STRIPE_PRICE_MONTHLY=${_STRIPE_PRICE_MONTHLY},STRIPE_PRICE_QUARTERLY=${_STRIPE_PRICE_QUARTERLY},STRIPE_PRICE_YEARLY=${_STRIPE_PRICE_YEARLY},APP_URL=${_APP_URL},STRIPE_PORTAL_RETURN_URL=${_STRIPE_PORTAL_RETURN_URL}'
+      # Secrets from Secret Manager (sensitive data)
+      - '--set-secrets=SUPABASE_SERVICE_ROLE_KEY=SUPABASE_SERVICE_ROLE_KEY:latest,STRIPE_SECRET_KEY=STRIPE_SECRET_KEY:latest,STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET:latest,OPENAI_API_KEY=OPENAI_API_KEY:latest,FB_APP_ID=FB_APP_ID:latest,FB_APP_SECRET=FB_APP_SECRET:latest,FB_WEBHOOK_VERIFY_TOKEN=FB_WEBHOOK_VERIFY_TOKEN:latest,GOOGLE_CLOUD_CLIENT_EMAIL=GOOGLE_CLOUD_CLIENT_EMAIL:latest,GOOGLE_CLOUD_PRIVATE_KEY=GOOGLE_CLOUD_PRIVATE_KEY:latest'
+    id: Deploy
+
 images:
   - '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_REPO}/${_SERVICE}:${SHORT_SHA}'
   - '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_REPO}/${_SERVICE}:latest'
@@ -33,8 +57,11 @@ substitutions:
   _REGION: us-central1
   _REPO: web
   _SERVICE: ai-dashboardatest
-  # Note: _NEXT_PUBLIC_* vars should be set in Cloud Build trigger UI
-  # to keep them out of the repo (even though they're public in browser)
+  _STRIPE_PRICE_MONTHLY: price_1SHkl01wyNtYCNj0g3uwntLM
+  _STRIPE_PRICE_QUARTERLY: price_1SHmBt1wyNtYCNj07QyC6kt0
+  _STRIPE_PRICE_YEARLY: price_1SHmBt1wyNtYCNj0hknuap7E
+  _APP_URL: https://your-cloud-run-url.run.app
+  _STRIPE_PORTAL_RETURN_URL: https://your-cloud-run-url.run.app/billing
 
 options:
   logging: CLOUD_LOGGING_ONLY
