--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^10.0.6",
-    "stripe": "^19.1.0"
+    "stripe": "^19.1.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
