Modified Landing Page

--- a/.env.example
+++ b/.env.example
@@ -32,5 +32,13 @@ FB_APP_SECRET=your_fb_app_secret
 # Telegram Configuration (Optional)
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 
+# 3D Model Configuration (Optional)
+# CDN URL for the 3D robot model. If not set, falls back to /models/robot.glb
+# Examples:
+# NEXT_PUBLIC_3D_MODEL_URL=https://cdn.jsdelivr.net/gh/your-repo/models/robot.glb
+# NEXT_PUBLIC_3D_MODEL_URL=https://storage.googleapis.com/your-bucket/models/robot.glb
+# NEXT_PUBLIC_3D_MODEL_URL=https://your-cdn.com/models/robot.glb
+NEXT_PUBLIC_3D_MODEL_URL=
+
 # Environment
 NODE_ENV=development
