--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "next": "15.5.4",
@@ -18,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-toastify": "^10.0.6",
     "stripe": "^19.1.0",
+    "three": "^0.181.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
